--- a/index.html
+++ b/index.html
@@ -4760,7 +4760,7 @@ Exclusive of current applicable taxes. *Terms and conditions apply.</span>
         <source type="image/jpeg" media="(max-width: 767px)" alt="alternate text for image">
 
         <source type="image/jpeg" media="(min-width: 768px)" data-src="/content/dam/tajhotels/in/en/offers/celebrating-our-bond/tajhotels/Better-Together-Taj-mob.jpg/jcr:content/renditions/cq5dam.web.512.512.jpeg" alt="alternate text for image">
-        <img class="offers-card-image " src="./Luxury Suites &amp; Villas in Coorg - Taj Madikeri Resort &amp; Spa, Coorg_files/cq5dam.web.512.512(7).jpeg" alt="alternate text for image" width="100%">
+        <img class="offers-card-image " src="https://www.tajhotels.com/content/dam/jiva-spa/hotels/nadesar-palace-varanasi/3x2/Nadesar_6_1369_3x2.jpg/jcr:content/renditions/cq5dam.web.756.756.jpeg" alt="alternate text for image" width="100%">
     </picture>
 
 
