--- a/index.html
+++ b/index.html
@@ -4821,7 +4821,7 @@ Exclusive of current applicable taxes. *Terms and conditions apply.</span>
         <source type="image/jpeg" media="(max-width: 767px)" alt="alternate text for image">
 
         <source type="image/jpeg" media="(min-width: 768px)" data-src="/content/dam/ihcl/paathya/pathya_landing_page/carecations/Carecations-banner-400x400.jpg/jcr:content/renditions/cq5dam.web.512.512.jpeg" alt="alternate text for image">
-        <img class="offers-card-image " src="./Luxury Suites &amp; Villas in Coorg - Taj Madikeri Resort &amp; Spa, Coorg_files/cq5dam.web.512.512(8).jpeg" alt="alternate text for image" width="100%">
+        <img class="offers-card-image " src="https://www.tajhotels.com/content/dam/luxury/hotels/Taj_Mahal_Mumbai/images/16x9/golden-dragon.jpg/jcr:content/renditions/cq5dam.web.512.512.jpeg" alt="alternate text for image" width="100%">
     </picture>
 
 
