--- a/index.html
+++ b/index.html
@@ -4769,8 +4769,8 @@ Exclusive of current applicable taxes. *Terms and conditions apply.</span>
         </div>
         <div class="offers-card-main">
             <div class="offer-main-left">
-                <h3 class="offers-card-title" title="Celebrating Our Bond">Celebrating Our Bond</h3>
-                <div class="offers-card-description">Celebrating Our Bond</div>
+                <h3 class="offers-card-title" title="Celebrating Our Bond">Rejuvenate your Body</h3>
+                <div class="offers-card-description">A spa day helps your city weary body. It refreshes the soul. Indulge in the luxury of time and while away a few hours with our traditional wood-fired Gudda Bath experience at theJ Wellness Circle.</div>
                 <div data-offercategory="taj:offers/rooms-and-suites"></div>
             </div>
             <div class="offer-main-right">
